Unref the UI builders

https://bugzilla.gnome.org/show_bug.cgi?id=735547